--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "naturopatia-cms",
+  "name": "antifake_cms",
   "version": "0.1.0",
   "private": true,
   "description": "A Strapi application",
